1.2-SNAPSHOT - Compile with java 8 \n - Support MythicMobs v4, v5 \n - Reduce jar size \n - Update files (v2)