@@ -12,7 +12,7 @@ import org.bukkit.Material;
 import org.bukkit.configuration.file.FileConfiguration;
 import org.bukkit.entity.Player;
 
-import java.util.List;
+import java.util.Collections;
 import java.util.Objects;
 
 public class MainEditor extends BasicGUI {
@@ -28,12 +28,10 @@ public class MainEditor extends BasicGUI {
         } else Editor.editorDungeon.put(p, dungeonID);
         SimpleConfigurationManager.get().build("", true, "Dungeons/" + dungeon + ".yml");
         FileConfiguration config = SimpleConfigurationManager.get().get("Dungeons/" + dungeon + ".yml");
-        Item dungeonName = new Item.ItemBuilder(Material.PAPER)
-                .displayName(Chat.normalColorize("&bDungeon Display Name"))
-                .lore(config.contains("name") ? Chat.normalColorize(config.getString("name")) : "")
-                .build();
+        Item dungeonName = new Item.ItemBuilder(Material.PAPER).displayName(Chat.normalColorize("&bDungeon Display Name")).lore(config.contains("name") ? Chat.normalColorize(config.getString("name")) : "").build();
         setItem(new ItemSection(0, dungeonName, "dungeon_display_name", e -> {
-            if (e.getWhoClicked() instanceof Player clicker) {
+            if (e.getWhoClicked() instanceof Player) {
+                Player clicker = (Player) e.getWhoClicked();
                 if (Editor.editorDungeonInfo.containsKey(clicker.getName() + "_" + dungeon)) {
                     Editor.editorDungeonInfo.replace(clicker.getName() + "_" + dungeon, "dungeon_display_name");
                 } else Editor.editorDungeonInfo.put(clicker.getName() + "_" + dungeon, "dungeon_display_name");
@@ -47,12 +45,10 @@ public class MainEditor extends BasicGUI {
                 Chat.sendMessage(clicker, "&bDungeon name:");
             }
         }));
-        Item worldName = new Item.ItemBuilder(Material.DIRT)
-                .displayName(Chat.normalColorize("&bDungeon World"))
-                .lore(config.contains("world") ? Chat.normalColorize("&7" + config.getString("world")) : "")
-                .build();
+        Item worldName = new Item.ItemBuilder(Material.DIRT).displayName(Chat.normalColorize("&bDungeon World")).lore(config.contains("world") ? Chat.normalColorize("&7" + config.getString("world")) : "").build();
         setItem(new ItemSection(1, worldName, "dungeon_world", e -> {
-            if (e.getWhoClicked() instanceof Player clicker) {
+            if (e.getWhoClicked() instanceof Player) {
+                Player clicker = (Player) e.getWhoClicked();
                 if (Editor.editorDungeonInfo.containsKey(clicker.getName() + "_" + dungeon)) {
                     Editor.editorDungeonInfo.replace(clicker.getName() + "_" + dungeon, "dungeon_world");
                 } else Editor.editorDungeonInfo.put(clicker.getName() + "_" + dungeon, "dungeon_world");
@@ -66,12 +62,10 @@ public class MainEditor extends BasicGUI {
                 Chat.sendMessage(clicker, "&bDungeon world:");
             }
         }));
-        Item lives = new Item.ItemBuilder(Material.REDSTONE)
-                .displayName(Chat.normalColorize("&bDungeon Lives"))
-                .lore(config.contains("lives") ? Chat.normalColorize("&7" + config.getInt("lives")) : "")
-                .build();
+        Item lives = new Item.ItemBuilder(Material.REDSTONE).displayName(Chat.normalColorize("&bDungeon Lives")).lore(config.contains("lives") ? Chat.normalColorize("&7" + config.getInt("lives")) : "").build();
         setItem(new ItemSection(2, lives, "dungeon_lives", e -> {
-            if (e.getWhoClicked() instanceof Player clicker) {
+            if (e.getWhoClicked() instanceof Player) {
+                Player clicker = (Player) e.getWhoClicked();
                 if (Editor.editorDungeonInfo.containsKey(clicker.getName() + "_" + dungeon)) {
                     Editor.editorDungeonInfo.replace(clicker.getName() + "_" + dungeon, "dungeon_lives");
                 } else Editor.editorDungeonInfo.put(clicker.getName() + "_" + dungeon, "dungeon_lives");
@@ -85,12 +79,10 @@ public class MainEditor extends BasicGUI {
                 Chat.sendMessage(clicker, "&bDungeon lives:");
             }
         }));
-        Item startTimes = new Item.ItemBuilder(Material.CLOCK)
-                .displayName(Chat.normalColorize("&bDungeon Start Times"))
-                .lore(config.contains("times.start") ? Chat.normalColorize("&7" + config.getInt("times.start")) : "")
-                .build();
+        Item startTimes = new Item.ItemBuilder(Material.CLOCK).displayName(Chat.normalColorize("&bDungeon Start Times")).lore(config.contains("times.start") ? Chat.normalColorize("&7" + config.getInt("times.start")) : "").build();
         setItem(new ItemSection(3, startTimes, "dungeon_start_times", e -> {
-            if (e.getWhoClicked() instanceof Player clicker) {
+            if (e.getWhoClicked() instanceof Player) {
+                Player clicker = (Player) e.getWhoClicked();
                 if (Editor.editorDungeonInfo.containsKey(clicker.getName() + "_" + dungeon)) {
                     Editor.editorDungeonInfo.replace(clicker.getName() + "_" + dungeon, "dungeon_start_times");
                 } else Editor.editorDungeonInfo.put(clicker.getName() + "_" + dungeon, "dungeon_start_times");
@@ -104,12 +96,10 @@ public class MainEditor extends BasicGUI {
                 Chat.sendMessage(clicker, "&bDungeon start times:");
             }
         }));
-        Item completeTimes = new Item.ItemBuilder(Material.CLOCK)
-                .displayName(Chat.normalColorize("&bDungeon Complete Times"))
-                .lore(config.contains("times.complete") ? Chat.normalColorize("&7" + config.getInt("times.complete")) : "")
-                .build();
+        Item completeTimes = new Item.ItemBuilder(Material.CLOCK).displayName(Chat.normalColorize("&bDungeon Complete Times")).lore(config.contains("times.complete") ? Chat.normalColorize("&7" + config.getInt("times.complete")) : "").build();
         setItem(new ItemSection(4, completeTimes, "dungeon_complete_times", e -> {
-            if (e.getWhoClicked() instanceof Player clicker) {
+            if (e.getWhoClicked() instanceof Player) {
+                Player clicker = (Player) e.getWhoClicked();
                 if (Editor.editorDungeonInfo.containsKey(clicker.getName() + "_" + dungeon)) {
                     Editor.editorDungeonInfo.replace(clicker.getName() + "_" + dungeon, "dungeon_complete_times");
                 } else Editor.editorDungeonInfo.put(clicker.getName() + "_" + dungeon, "dungeon_complete_times");
@@ -123,12 +113,10 @@ public class MainEditor extends BasicGUI {
                 Chat.sendMessage(clicker, "&bDungeon complete times:");
             }
         }));
-        Item startLocation = new Item.ItemBuilder(Material.COMPASS)
-                .displayName(Chat.normalColorize("&bDungeon Start Location"))
-                .lore(config.contains("location.join") ? Chat.normalColorize("&7" + config.getString("location.join")) : "")
-                .build();
+        Item startLocation = new Item.ItemBuilder(Material.COMPASS).displayName(Chat.normalColorize("&bDungeon Start Location")).lore(config.contains("location.join") ? Chat.normalColorize("&7" + config.getString("location.join")) : "").build();
         setItem(new ItemSection(5, startLocation, "dungeon_start_location", e -> {
-            if (e.getWhoClicked() instanceof Player clicker) {
+            if (e.getWhoClicked() instanceof Player) {
+                Player clicker = (Player) e.getWhoClicked();
                 if (Editor.editorDungeonInfo.containsKey(clicker.getName() + "_" + dungeon)) {
                     Editor.editorDungeonInfo.replace(clicker.getName() + "_" + dungeon, "dungeon_start_location");
                 } else Editor.editorDungeonInfo.put(clicker.getName() + "_" + dungeon, "dungeon_start_location");
@@ -139,12 +127,10 @@ public class MainEditor extends BasicGUI {
                 Chat.sendMessage(clicker, "&bGo to the dungeon map and break the block as the location you want to set as your starting location");
             }
         }));
-        Item completeLocation = new Item.ItemBuilder(Material.COMPASS)
-                .displayName(Chat.normalColorize("&bDungeon Complete Location"))
-                .lore(config.contains("location.complete") ? Chat.normalColorize("&7" + config.getString("location.complete")) : "")
-                .build();
+        Item completeLocation = new Item.ItemBuilder(Material.COMPASS).displayName(Chat.normalColorize("&bDungeon Complete Location")).lore(config.contains("location.complete") ? Chat.normalColorize("&7" + config.getString("location.complete")) : "").build();
         setItem(new ItemSection(6, completeLocation, "dungeon_complete_location", e -> {
-            if (e.getWhoClicked() instanceof Player clicker) {
+            if (e.getWhoClicked() instanceof Player) {
+                Player clicker = (Player) e.getWhoClicked();
                 if (Editor.editorDungeonInfo.containsKey(clicker.getName() + "_" + dungeon)) {
                     Editor.editorDungeonInfo.replace(clicker.getName() + "_" + dungeon, "dungeon_complete_location");
                 } else Editor.editorDungeonInfo.put(clicker.getName() + "_" + dungeon, "dungeon_complete_location");
@@ -155,12 +141,10 @@ public class MainEditor extends BasicGUI {
                 Chat.sendMessage(clicker, "&bGo to the default map (NOT DUNGEON MAP) and break the block as the location you want to set as the location when completing your dungeon");
             }
         }));
-        Item requirementsInfo = new Item.ItemBuilder(Material.RED_DYE)
-                .displayName(Chat.normalColorize("&bDungeon Requirements Info"))
-                .lore(config.contains("requirements.info") ? Chat.normalColorize(config.getStringList("requirements.info")) : Chat.normalColorize(List.of("&7")))
-                .build();
+        Item requirementsInfo = new Item.ItemBuilder(Material.RED_DYE).displayName(Chat.normalColorize("&bDungeon Requirements Info")).lore(config.contains("requirements.info") ? Chat.normalColorize(config.getStringList("requirements.info")) : Chat.normalColorize(Collections.singletonList("&7"))).build();
         setItem(new ItemSection(7, requirementsInfo, "dungeon_requirements_info", e -> {
-            if (e.getWhoClicked() instanceof Player clicker) {
+            if (e.getWhoClicked() instanceof Player) {
+                Player clicker = (Player) e.getWhoClicked();
                 if (Editor.editorDungeonInfo.containsKey(clicker.getName() + "_" + dungeon)) {
                     Editor.editorDungeonInfo.replace(clicker.getName() + "_" + dungeon, "dungeon_requirements_info");
                 } else Editor.editorDungeonInfo.put(clicker.getName() + "_" + dungeon, "dungeon_requirements_info");
@@ -174,12 +158,10 @@ public class MainEditor extends BasicGUI {
                 new ListStringEditor(p, dungeon, "requirements.info").openInventory(p);
             }
         }));
-        Item requirementsItem = new Item.ItemBuilder(Material.IRON_BOOTS)
-                .displayName(Chat.normalColorize("&bDungeon Requirements Item"))
-                .lore(config.contains("requirements.item") ? Chat.normalColorize(config.getStringList("requirements.item")) : Chat.normalColorize(List.of("&7")))
-                .build();
+        Item requirementsItem = new Item.ItemBuilder(Material.IRON_BOOTS).displayName(Chat.normalColorize("&bDungeon Requirements Item")).lore(config.contains("requirements.item") ? Chat.normalColorize(config.getStringList("requirements.item")) : Chat.normalColorize(Collections.singletonList("&7"))).build();
         setItem(new ItemSection(8, requirementsItem, "dungeon_requirements_item", e -> {
-            if (e.getWhoClicked() instanceof Player clicker) {
+            if (e.getWhoClicked() instanceof Player) {
+                Player clicker = (Player) e.getWhoClicked();
                 if (Editor.editorDungeonInfo.containsKey(clicker.getName() + "_" + dungeon)) {
                     Editor.editorDungeonInfo.replace(clicker.getName() + "_" + dungeon, "dungeon_requirements_item");
                 } else Editor.editorDungeonInfo.put(clicker.getName() + "_" + dungeon, "dungeon_requirements_item");
@@ -193,12 +175,10 @@ public class MainEditor extends BasicGUI {
                 new ListStringEditor(p, dungeon, "requirements.item").openInventory(p);
             }
         }));
-        Item requirementsInfoLore = new Item.ItemBuilder(Material.PAPER)
-                .displayName(Chat.normalColorize("&bDungeon Requirements Info Lore"))
-                .lore(config.contains("requirements.info_lore") ? Chat.normalColorize(config.getStringList("requirements.info_lore")) : Chat.normalColorize(List.of("&7")))
-                .build();
+        Item requirementsInfoLore = new Item.ItemBuilder(Material.PAPER).displayName(Chat.normalColorize("&bDungeon Requirements Info Lore")).lore(config.contains("requirements.info_lore") ? Chat.normalColorize(config.getStringList("requirements.info_lore")) : Chat.normalColorize(Collections.singletonList("&7"))).build();
         setItem(new ItemSection(9, requirementsInfoLore, "dungeon_requirements_info_lore", e -> {
-            if (e.getWhoClicked() instanceof Player clicker) {
+            if (e.getWhoClicked() instanceof Player) {
+                Player clicker = (Player) e.getWhoClicked();
                 if (Editor.editorDungeonInfo.containsKey(clicker.getName() + "_" + dungeon)) {
                     Editor.editorDungeonInfo.replace(clicker.getName() + "_" + dungeon, "dungeon_requirements_info_lore");
                 } else
@@ -213,12 +193,10 @@ public class MainEditor extends BasicGUI {
                 new ListStringEditor(p, dungeon, "requirements.info_lore").openInventory(p);
             }
         }));
-        Item requirementsItemLore = new Item.ItemBuilder(Material.IRON_AXE)
-                .displayName(Chat.normalColorize("&bDungeon Requirements Item Lore"))
-                .lore(config.contains("requirements.item_lore") ? Chat.normalColorize(config.getStringList("requirements.item_lore")) : Chat.normalColorize(List.of("&7")))
-                .build();
+        Item requirementsItemLore = new Item.ItemBuilder(Material.IRON_AXE).displayName(Chat.normalColorize("&bDungeon Requirements Item Lore")).lore(config.contains("requirements.item_lore") ? Chat.normalColorize(config.getStringList("requirements.item_lore")) : Chat.normalColorize(Collections.singletonList("&7"))).build();
         setItem(new ItemSection(10, requirementsItemLore, "dungeon_requirements_item_lore", e -> {
-            if (e.getWhoClicked() instanceof Player clicker) {
+            if (e.getWhoClicked() instanceof Player) {
+                Player clicker = (Player) e.getWhoClicked();
                 if (Editor.editorDungeonInfo.containsKey(clicker.getName() + "_" + dungeon)) {
                     Editor.editorDungeonInfo.replace(clicker.getName() + "_" + dungeon, "dungeon_requirements_item_lore");
                 } else
@@ -233,12 +211,10 @@ public class MainEditor extends BasicGUI {
                 new ListStringEditor(p, dungeon, "requirements.item_lore").openInventory(p);
             }
         }));
-        Item commandJoin = new Item.ItemBuilder(Material.ENCHANTED_BOOK)
-                .displayName(Chat.normalColorize("&bDungeon Command Join"))
-                .lore(config.contains("commands.join") ? Chat.normalColorize(config.getStringList("commands.join")) : Chat.normalColorize(List.of("&7")))
-                .build();
+        Item commandJoin = new Item.ItemBuilder(Material.ENCHANTED_BOOK).displayName(Chat.normalColorize("&bDungeon Command Join")).lore(config.contains("commands.join") ? Chat.normalColorize(config.getStringList("commands.join")) : Chat.normalColorize(Collections.singletonList("&7"))).build();
         setItem(new ItemSection(11, commandJoin, "dungeon_commands_join", e -> {
-            if (e.getWhoClicked() instanceof Player clicker) {
+            if (e.getWhoClicked() instanceof Player) {
+                Player clicker = (Player) e.getWhoClicked();
                 if (Editor.editorDungeonInfo.containsKey(clicker.getName() + "_" + dungeon)) {
                     Editor.editorDungeonInfo.replace(clicker.getName() + "_" + dungeon, "dungeon_commands_join");
                 } else Editor.editorDungeonInfo.put(clicker.getName() + "_" + dungeon, "dungeon_commands_join");
@@ -252,12 +228,10 @@ public class MainEditor extends BasicGUI {
                 new ListStringEditor(p, dungeon, "commands.join").openInventory(p);
             }
         }));
-        Item commandComplete = new Item.ItemBuilder(Material.ENCHANTED_BOOK)
-                .displayName(Chat.normalColorize("&bDungeon Command Complete"))
-                .lore(config.contains("commands.complete") ? Chat.normalColorize(config.getStringList("commands.complete")) : Chat.normalColorize(List.of("&7")))
-                .build();
+        Item commandComplete = new Item.ItemBuilder(Material.ENCHANTED_BOOK).displayName(Chat.normalColorize("&bDungeon Command Complete")).lore(config.contains("commands.complete") ? Chat.normalColorize(config.getStringList("commands.complete")) : Chat.normalColorize(Collections.singletonList("&7"))).build();
         setItem(new ItemSection(12, commandComplete, "dungeon_commands_complete", e -> {
-            if (e.getWhoClicked() instanceof Player clicker) {
+            if (e.getWhoClicked() instanceof Player) {
+                Player clicker = (Player) e.getWhoClicked();
                 if (Editor.editorDungeonInfo.containsKey(clicker.getName() + "_" + dungeon)) {
                     Editor.editorDungeonInfo.replace(clicker.getName() + "_" + dungeon, "dungeon_commands_complete");
                 } else Editor.editorDungeonInfo.put(clicker.getName() + "_" + dungeon, "dungeon_commands_complete");
@@ -271,13 +245,10 @@ public class MainEditor extends BasicGUI {
                 new ListStringEditor(p, dungeon, "commands.complete").openInventory(p);
             }
         }));
-        Item stage = new Item.ItemBuilder(Material.EMERALD)
-                .displayName(Chat.normalColorize("&bDungeon Stages"))
-                .lore(config.contains("stages") ? Chat.normalColorize("&7" + Objects.requireNonNull(config.getConfigurationSection("stages")).getKeys(false)
-                        .size() + "&7 Stages") : Chat.normalColorize("&7"))
-                .build();
+        Item stage = new Item.ItemBuilder(Material.EMERALD).displayName(Chat.normalColorize("&bDungeon Stages")).lore(config.contains("stages") ? Chat.normalColorize("&7" + Objects.requireNonNull(config.getConfigurationSection("stages")).getKeys(false).size() + "&7 Stages") : Chat.normalColorize("&7")).build();
         setItem(new ItemSection(13, stage, "dungeon_stages", e -> {
-            if (e.getWhoClicked() instanceof Player clicker) {
+            if (e.getWhoClicked() instanceof Player) {
+                Player clicker = (Player) e.getWhoClicked();
                 if (Editor.editorDungeonInfo.containsKey(clicker.getName() + "_" + dungeon)) {
                     Editor.editorDungeonInfo.replace(clicker.getName() + "_" + dungeon, "dungeon_stages");
                 } else Editor.editorDungeonInfo.put(clicker.getName() + "_" + dungeon, "dungeon_stages");
